# scratch

./: .gitignore  README.md
adoc/: example.adoc
as/: add.s  add2.s  atomic_inc.cpp  atomic_inc.s  hello.s  run.c
c/fixparser/: SConstruct  fixparser.c  fixparser.h  main.c
c/mac/: SConstruct
c/misc/: sizeof.c
c/multicast/: CMakeLists.txt  main.cpp  mcastclient.cpp  mcastserver.cpp  multicast.cpp  multicast.h  nets.cpp  udp_multicast.cpp  udp_multicast2.cpp  udp_multicast3.cpp
c/tiwae/: CMakeLists.txt
c/tiwae/src/: CMakeLists.txt  Column.cpp  Column.h  Exceptions.h  MarketDataStore.cpp  MarketDataStore.h  ScaledIntColumn.cpp  ScaledIntColumn.h  ScopeUtil.h  TimeStampColumn.cpp  TimeStampColumn.h  main.cpp  main2.cpp  timing.h
hs/course/: hello.hs  main.hs  types.hs
hs/http/: http.hs  xml.hs
hs/puzzlers/: first.hs
java/files/src/com/company/: MMaps.java  Main.java
java/multicast/src/: MulticastReceiver.java  MulticastSender.java  UdpBroadcaster.java
java/opencltest/: pom.xml
java/opencltest/src/main/java/org/jocl/samples/: JOCLBenchmark.java  JOCLSample.java
java/risk/: pom.xml
java/risk/src/main/java/org/sample/: Maps.java  MyBenchmark.java  Networks.java  RiskPosition.java  RiskRepository.java  SleepBenchmark.java
java/risk/src/main/java/org/sample/enums/: EnumBenchmark.java  TestEnum.java
java/risk/src/main/java/org/sample/indy/: Buffer.java  BufferBenchmark.java
java/risk/src/main/test/org/sample/: MarginTheoryTest.java  NetworkingTest.java  RiskRepositoryTest.java  SortLots.java  Tests.java
python/datavis/: datavis.py
src/: UdpBroadcaster.java
(+20 files in other folders)
